--- a/source/SlimCache/SlimCache.csproj
+++ b/source/SlimCache/SlimCache.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +56,7 @@
     <Compile Include="LRUFileCacheCleaner.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IsolatedStorageFileSystem.cs" />
+    <Compile Include="HttpRuntimeMemoryCache.cs" />
     <Compile Include="StandardFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
