--- a/tests/SlimCacheTests/SlimCacheTests.csproj
+++ b/tests/SlimCacheTests/SlimCacheTests.csproj
@@ -38,6 +38,9 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq">
+      <HintPath>..\..\binaries\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -60,6 +63,7 @@
     <Compile Include="LRUFileCacheCleanerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardFileSystemCacheTests.cs" />
+    <Compile Include="StandardFileSystemTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\source\SlimCache\SlimCache.csproj">
