--- a/source/SlimCache/SlimCache.csproj
+++ b/source/SlimCache/SlimCache.csproj
@@ -56,9 +56,10 @@
     <Compile Include="LRUFileCacheCleaner.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IsolatedStorageFileSystem.cs" />
-    <Compile Include="HttpRuntimeMemoryCache.cs" />
+    <Compile Include="MemoryCache.cs" />
     <Compile Include="StandardFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CachingDiagram.cd" />
